Fixed Text Overflow in Split Body

--- a/src/patterns/organisms/navigation.scss
+++ b/src/patterns/organisms/navigation.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	justify-content: start;
 	gap: var(--size-fluid-5);
-	padding: var(--size-fluid-2);
+	padding: var(--size-fluid-2) 0 var(--size-fluid-2) 0;
 	box-shadow: var(--shadow-2);
 	background-color: var(--gray-0);
 	position: sticky;
